Do not show delete button for deleted strategies

--- a/src/app/layout/trading-automation/trading-strategies.component.html
+++ b/src/app/layout/trading-automation/trading-strategies.component.html
@@ -47,7 +47,9 @@
                 </ul>
             </td>
             <td>
-                <button (click)="deleteStrategyExecution(strategyExecution)" class="btn btn-danger">
+                <button *ngIf="strategyExecution.status === 'ACTIVE'"
+                        (click)="deleteStrategyExecution(strategyExecution)"
+                        class="btn btn-danger">
                     Delete strategy
                 </button>
             </td>
