--- a/src/app/layout/trading-automation/trading-strategies.component.html
+++ b/src/app/layout/trading-automation/trading-strategies.component.html
@@ -1,4 +1,20 @@
 <app-page-header [heading]="'Manage automated trading strategies'" [icon]="'fa-magic'"></app-page-header>
+<div class="row">
+    <div class="col-xl-12">
+        <div class="nav-item btn-group ml-auto" role="group">
+            <button *ngIf="isShowingOnlyActiveStrategies"
+                    (click)="showAllStrategies()"
+                    class="btn btn-sm" type="button">
+                Show only active <i class="fa fa-toggle-on"></i>
+            </button>
+            <button *ngIf="!isShowingOnlyActiveStrategies"
+                    (click)="showOnlyActiveStrategies()"
+                    class="btn btn-sm" type="button">
+                Show only active <i class="fa fa-toggle-off"></i>
+            </button>
+        </div>
+    </div>
+</div>
 <div class="card mb-3 bg-dark" *ngFor="let exchange of getExchangesSupportedForTrading()">
     <div class="card-header">
         <div class="row justify-content-between align-items-center px-2">
