--- a/src/app/layout/trading-automation/trading-strategies.component.html
+++ b/src/app/layout/trading-automation/trading-strategies.component.html
@@ -33,7 +33,7 @@
         <thead>
         <tr>
             <th>Autocoin user</th>
-            <th>Strategy name</th>
+            <th>Strategy</th>
             <th>Currency pair</th>
             <th>Status</th>
             <th>Parameters</th>
@@ -44,23 +44,50 @@
         <tbody>
         <tr *ngFor="let strategyExecution of getStrategiesExecutionsByExchangeName(exchange.name)">
             <td>{{ getExchangeUserNameById(strategyExecution.exchangeUserId) }}</td>
-            <td>{{ strategyExecution.strategyName }}</td>
+            <td>
+                <div>{{ strategyExecution.strategyName }}</div>
+                <span *ngIf="strategyExecution.startTime"
+                      class="badge badge-secondary">
+                    Started {{strategyExecution.startTime | date: 'y-MM-dd HH:mm:ss' }}
+                </span>
+            </td>
             <td>{{ strategyExecution.baseCurrencyCode }}/{{ strategyExecution.counterCurrencyCode }}</td>
             <td>{{ strategyExecution.status }}</td>
             <td>
-                <ul>
-                    <li *ngFor="let item of  flattenParameters(strategyExecution.strategyParameters) | keyvalue">
-                        {{ item.key }}: {{ item.value }}
-                    </li>
-                </ul>
+                <div *ngIf="true; let isShowingParameters = false">
+                    <button
+                        (click)="isShowingParameters = !isShowingParameters"
+                        class="btn btn-sm" type="button">
+                        Show <i class="fa" [class.fa-toggle-on]="isShowingParameters"
+                                [class.fa-toggle-off]="!isShowingParameters"></i>
+                    </button>
+                    <div [class.d-lg-none]="!isShowingParameters">
+                        <ul>
+                            <li *ngFor="let item of  flattenParameters(strategyExecution.strategyParameters) | keyvalue">
+                                {{ item.key }}: {{ item.value }}
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </td>
             <td>
                 <div *ngIf="strategyExecution.orders.length == 0">-</div>
-                <ul *ngFor="let order of strategyExecution.orders | keyvalue">
-                    <li>
-                        {{ order.key }}: {{ order.value }}
-                    </li>
-                </ul>
+                <div *ngIf="strategyExecution.orders.length > 0; let isShowingOrders = false">
+                    <button
+                        (click)="isShowingOrders = !isShowingOrders"
+                        class="btn btn-sm" type="button">
+                        Show <i class="fa" [class.fa-toggle-on]="isShowingOrders"
+                                [class.fa-toggle-off]="!isShowingOrders"></i>
+                    </button>
+                    <div [class.d-lg-none]="!isShowingOrders">
+                        <ul *ngFor="let order of strategyExecution.orders | keyvalue">
+                            <li>
+                                {{ order.key }}: {{ order.value }}
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
             </td>
             <td>
                 <button *ngIf="strategyExecution.status === 'ACTIVE'"
